# armor2022

./: .gitignore  CMakeLists.txt  README.md  config.toml  env.sh  main.cpp  ncnn.sh
daemon/: README.md  armor-autostart.service.in  daemon.py  install-armor-autostart.sh  supervisord.conf
include/: imageshow.cpp  imageshow.hpp
include/sort/: sort.cpp  sort.h
source/: ArmorFinder.hpp  LightArmorFinder.hpp  TfClassifier.cpp  TfClassifier.hpp  attack.cpp  attack.hpp  base.cpp  base.hpp  communicator.cpp  communicator.hpp  imageshow.cpp  kalman.hpp  target.cpp  target.hpp
source/capture/: base_capture.hpp  mind_capture.hpp
source/sort/: sort.cpp
source/usbio/: utility.cpp
source/windmill/: Windmill.cpp  Windmill.hpp
